--- a/site/_layouts/post.html
+++ b/site/_layouts/post.html
@@ -6,13 +6,14 @@ layout: default
   <div class="container">
     <div class="row">
 
-      {%if page.image %}
-      <div class="col col-6 col-d-12">
-        <div class="post-image">
-          <img loading="lazy" src="{{site.baseurl}}{{page.image}}" alt="{{page.title}}">
-        </div>
-      </div>
-      {%endif %}
+      {% if page.image %}
+<div class="col col-6 col-d-12">
+  <div class="post-image">
+    <img loading="lazy" src="{{ page.image | relative_url }}" alt="{{ page.title }}">
+  </div>
+</div>
+{% endif %}
+
 
       <div class="col col-6 col-d-12">
         <div class="post__info">
