--- a/site/_layouts/post.html
+++ b/site/_layouts/post.html
@@ -7,13 +7,12 @@ layout: default
     <div class="row">
 
       {% if page.image %}
-<div class="col col-6 col-d-12">
-  <div class="post-image">
-    <img loading="lazy" src="{{ page.image | relative_url }}" alt="{{ page.title }}">
-  </div>
-</div>
-{% endif %}
-
+      <div class="col col-6 col-d-12">
+        <div class="post-image">
+          <img loading="lazy" src="{{ page.image | relative_url }}" alt="{{ page.title }}">
+        </div>
+      </div>
+      {% endif %}
 
       <div class="col col-6 col-d-12">
         <div class="post__info">
@@ -21,35 +20,33 @@ layout: default
           {% if page.tags.size >= 1 %}
           <div class="post-tags">
             {% for tag in page.tags %}
-              <a href="{{ site.baseurl }}/tag/{{ tag | downcase }}" class="post-tags__tag">{{ tag }}</a>
+              <a href="{{ '/tag/' | append: tag | downcase | relative_url }}" class="post-tags__tag">{{ tag }}</a>
             {% endfor %}
           </div>
           {% endif %}
-
 
           <h1 class="post__title">{{ page.title | escape }}</h1>
 
           <div class="post__meta">
             <div class="post__author-image">
-              <img loading="lazy" src="{{ site.data.author.author_image }}" alt="{{ site.data.author.author_name }}">
+              <img loading="lazy" src="{{ site.data.author.author_image | relative_url }}" alt="{{ site.data.author.author_name }}">
             </div>
 
             <div class="post__meta-bottom">
               <div class="post__author">{{ site.data.author.author_name }}</div>
-              <time class="post__date" datetime="{{ page.date | date_to_xmlschema }}">{{ page.date | date_to_string
-                }}</time>
+              <time class="post__date" datetime="{{ page.date | date_to_xmlschema }}">{{ page.date | date_to_string }}</time>
             </div>
           </div>
 
         </div>
       </div>
+
     </div>
   </div>
 </div>
 
 <!-- begin post -->
 <div class="container animate">
-
   <article class="post">
 
     <div class="post__content">
