--- a/component-library/components/projects-section/projects-section.jekyll.html
+++ b/component-library/components/projects-section/projects-section.jekyll.html
@@ -8,7 +8,7 @@
           <div class="section__info">
             <div class="section__head">
               <h2 class="section__title">{{ include.title }}</h2>
-              <a class="section__link" href="{{ include.link_url }}">View all <ion-icon name="arrow-forward"></ion-icon></a>
+              <a class="section__link" href="{{ include.link_url | relative_url }}">View all <ion-icon name="arrow-forward"></ion-icon></a>
             </div>
             <div class="section__description">{{ include.description_html }}</div>
           </div>
