--- a/site/_includes/head.html
+++ b/site/_includes/head.html
@@ -29,4 +29,6 @@
 
   <link rel="stylesheet" href="{{ '/assets/main.css' | relative_url }}">
 
+  <link rel="icon" href="{{ '/favicon.ico' | relative_url }}">
+
 </head>
