--- a/component-library/components/testimonial-card/testimonial-card.jekyll.html
+++ b/component-library/components/testimonial-card/testimonial-card.jekyll.html
@@ -1,23 +1,34 @@
 {% assign c = "c-testimonial-card" %}
-<div class="{{c}}">
-  <div class="{{c}}__content">
-    <div class="{{c}}__client-meta">
-      {% if include.testimonial-item.image %}
-        <div class="{{c}}__image-container">
-          <img class="{{c}}__client-avatar" src="{{ include.testimonial-item.image }}" alt="{{ include.testimonial-item.name }}">
+<div class="{{ c }}">
+  <div class="{{ c }}__content">
+
+    <div class="{{ c }}__client-meta">
+
+      {% if include.testimonial_item.logo %}
+        <div class="{{ c }}__image-container">
+          <img
+            class="{{ c }}__client-avatar"
+            loading="lazy"
+            src="{{ include.testimonial_item.logo | relative_url }}"
+            alt="{{ include.testimonial_item.company | default: 'Company' }} logo">
         </div>
       {% endif %}
-      <div class="{{c}}__client-info">
-        {% if include.testimonial-item.name %}
-          <h3 class="{{c}}__client-name">{{ include.testimonial-item.name }}</h3>
+
+      <div class="{{ c }}__client-info">
+        {% if include.testimonial_item.company %}
+          <h3 class="{{ c }}__client-name">{{ include.testimonial_item.company }}</h3>
         {% endif %}
-        {% if include.testimonial-item.position %}
-          <p class="{{c}}__client-position">{{ include.testimonial-item.position }}</p>
+
+        {% if include.testimonial_item.years %}
+          <p class="{{ c }}__client-position">{{ include.testimonial_item.years }}</p>
         {% endif %}
       </div>
+
     </div>
-    {% if include.testimonial-item.blurb %}
-      <p class="{{c}}__client-text">{{ include.testimonial-item.blurb }}</p>
+
+    {% if include.testimonial_item.summary %}
+      <p class="{{ c }}__client-text">{{ include.testimonial_item.summary }}</p>
     {% endif %}
+
   </div>
 </div>
