--- a/component-library/components/testimonial-card/testimonial-card.jekyll.html
+++ b/component-library/components/testimonial-card/testimonial-card.jekyll.html
@@ -6,7 +6,7 @@
 
       {% assign logo_src = include.testimonial_item.logo | default: include.testimonial_item.image %}
       {% if logo_src %}
-        <div class="{{ c }}__image-container c-work-logo-wrap">
+        <div class="c-work-logo-wrap">
           <div class="c-work-logo-badge">
             <img
               class="c-work-logo-img"
