--- a/component-library/components/projects-section/projects-section.jekyll.html
+++ b/component-library/components/projects-section/projects-section.jekyll.html
@@ -8,14 +8,17 @@
           <div class="section__info">
             <div class="section__head">
               <h2 class="section__title">{{ include.title }}</h2>
-              <a class="section__link" href="{{ include.link_url | relative_url }}">View all <ion-icon name="arrow-forward"></ion-icon></a>
+              <a class="section__link" href="{{ include.link_url | relative_url }}">
+                View all <ion-icon name="arrow-forward"></ion-icon>
+              </a>
             </div>
             <div class="section__description">{{ include.description_html }}</div>
           </div>
 
           {% if include.show_projects %}
           <div class="row">
-            {% for project in site.projects %}
+            {% assign sorted_projects = site.projects | sort: "date" | reverse %}
+            {% for project in sorted_projects %}
               {% if forloop.index <= 6 %}
                 {% bookshop project-card project=project %}
               {% endif %}
