--- a/component-library/components/hero/hero.jekyll.html
+++ b/component-library/components/hero/hero.jekyll.html
@@ -19,7 +19,8 @@
 
           <div class="{{c}}__right">
             <div class="{{c}}__image">
-              <img loading="lazy" src="{{ include.image }}" alt="{{ include.hero_image_alt }}">
+             <img loading="lazy" src="{{ include.image | relative_url }}" alt="{{ include.image_alt }}">
+
             </div>
           </div>
 
