--- a/component-library/components/page-image/page-image.jekyll.html
+++ b/component-library/components/page-image/page-image.jekyll.html
@@ -2,8 +2,8 @@
 <div class="container">
   <div class="row">
     <div class="col col-12">
-      <div class="{{c}} animate">
-        <img loading="lazy" src="{{ include.image }}" alt="{{ include.image_alt }}">
+      <div class="{{ c }} animate">
+        <img loading="lazy" src="{{ include.image | relative_url }}" alt="{{ include.image_alt }}">
       </div>
     </div>
   </div>
