--- a/site/_layouts/project.html
+++ b/site/_layouts/project.html
@@ -5,29 +5,24 @@ layout: default
 <div class="container">
 
   {% bookshop page-heading title=page.title description=page.subtitle %}
-  {% assign page_image = site.baseurl | append: page.image %}
-  {% bookshop page-image image=page_image %}
+
+  {% if page.image %}
+    {% bookshop page-image image=page.image image_alt=page.title %}
+  {% endif %}
 
   <div class="page animate">
     {{ content }}
   </div>
 
   {% if page.previous.url %}
-  <div class="project__navigation animate">
-    <a class="project__prev" href="{{page.previous.url}}">
-      <div class="project__box">
-        <span class="project__nav__info">Next Project</span>
-        <h2 class="project__nav__title">{{page.previous.title}}<ion-icon name="arrow-right"></ion-icon></h2>
-      </div>
-    </a>
-  </div>
+    <div class="project__navigation animate">
+      <a class="project__prev" href="{{ page.previous.url | relative_url }}">
+        <div class="project__box">
+          <span class="project__nav__info">Next Project</span>
+          <h2 class="project__nav__title">{{ page.previous.title }}<ion-icon name="arrow-right"></ion-icon></h2>
+        </div>
+      </a>
+    </div>
   {% endif %}
 
 </div>
-
-{% bookshop
-  newsletter newsletter_title=site.data.newsletter.newsletter_title
-  newsletter_description=site.data.newsletter.newsletter_description
-  newsletter_identifier=site.data.newsletter.newsletter_identifier
-  newsletter_button=site.data.newsletter.newsletter_button
-%}
